--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "alzabeer-pos",
-  "version": "1.0.0",
+  "name": "khotiyan-pos",
+  "version": "2.1.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
